xx Yyy 2013: 1.1.15 Miek Gieben <miek@miek.nl>
  * [rdup] Change -P so any arguments are executed with 'sh -c', 
    this removes the 7 option limit (Alexander Neumann)
  * [rdup-tr] Fix crashes with filename encryption and symlinks (reported by
    Jakob Fink)
  * [rdup] Fix the linked list that tracks the child's PIDs.

19 Jan 2013: 1.1.14 Miek Gieben <miek@miek.nl>
   * [rdup] check for the existence of ._rdup_. files and parse its contents
     to restore the actual files' ownership (Miek Gieben)
   * [rdup-up] save user/group info in ._rdup_. files when chown(1)ing has failed.
     Useful when backing up via sshfs. See rdup(1) "Non-root backups" (Miek Gieben)
   * [rdup-up] add -u flag to suppress creating these ._rdup_. files. 
     (useful when restoring) (Miek Gieben)
   * [rdup] add -u flag to suppress interpreting these ._rdup_. files. (Miek Gieben)
   * [rdup-tr] compile fix when compiling with gcc 4.7 (reported by D. L.)
   * [rdup-tr] honor the TMPDIR environment variable (Miek Gieben)
   * [rdup] Don't look at the device ID when deciding if a file needs to be backed up 
     (See https://github.com/miekg/rdup/issues/3) 


18 Feb 2012: 1.1.13 Miek Gieben <rdup@miek.nl>
   * Make rdup-tr compile when libnettle was not found (Miek Gieben)
   * Fix for very large inodes and filesizes (Kojedzinszky Richard)
   * Fix tar/pax output when the filesize of files changes (rdup -Pgzip for
     instance) (Reported by: Alejandro Pulver). This created files padded
     with zero bytes.


21 Jan 2012: 1.1.12 Miek Gieben <rdup@miek.nl>
   * Test suite fixed
   * Fix Debian bug 627617


18 Feb 2011. 1.1.11 Miek Gieben <rdup@miek.nl>
   * Polish
   * rdup-up: added -q option. Be quiet when chown
     fails even when root (handy for backups on sshfs)


05 Dec 2010: 1.1.10 Miek Gieben <rdup@miek.nl>
   * One memleak fix removed (Tom Hendrikx)


04 Dec 2010: 1.1.9 Miek Gieben <rdup@miek.nl>
   * Fix whooping amount of memleaks (rdup-tr, rdup-up) (Crispin Boylan)

